Add readme with statuses of g/admin plugins

--- a/config.json
+++ b/config.json
@@ -46,7 +46,8 @@
         "wednesday!Wednesday@Taiga-Best-Waifu.uguu"
       ],
       "channels": [
-        "#idlerpg"
+        "#idlerpg",
+        "#arttest"
       ],
       "no_channels": [
         "#chat"
