General cleanup I started

--- a/config.json
+++ b/config.json
@@ -47,7 +47,9 @@
       ],
       "channels": [
         "#idlerpg",
-        "#arttest"
+        "#arttest",
+        "#rizonirpg",
+        "#wednesday"
       ],
       "no_channels": [
         "#chat"
