Remove faulty extra comma

--- a/config.json
+++ b/config.json
@@ -42,7 +42,7 @@
       ],
       "channels": [
         "#kelp",
-        "#homescreen",
+        "#homescreen"
       ],
       "no_channels": [
         "#chat"
