Plugin reloads ignore dot files, log displays users host

--- a/config.json
+++ b/config.json
@@ -47,7 +47,7 @@
             ],
             "no_ignore": [
                 "arteries!~arteries@Rizon-CD9CCF54.know.cable.virginm.net",
-                "Taigabot!~Taigabot@Taigabot.uguu"
+                "Taigabot!Taiga@Taigabot.uguu"
             ],
             "admins": [
                 "wednesday!Wednesday@Taiga-Best-Waifu.uguu"
