config.json: support multiple plugin dirs
the github web ui is alright

--- a/config.json
+++ b/config.json
@@ -1,7 +1,10 @@
 {
     "db_dir": "./persist/db/",
     "log_dir": "./persist/log/",
-    "plugin_dir": "./plugins/",
+    "plugin_dirs": [
+        "./plugins/core/",
+        "./plugins/stupid/"
+    ],
     "valid_command_prefixes": [
         ".",
         ",",
