--- a/config.json
+++ b/config.json
@@ -45,8 +45,7 @@
                 "None"
             ],
             "ignored": [
-                "brobot@s.u.c.c",
-                "Waifu!Your@waifu.a.shit"
+                "brobot@s.u.c.c"
             ],
             "no_ignore": [
                 "arteries!~arteries@Rizon-CD9CCF54.know.cable.virginm.net",
